# diskscan

./: CMakeLists.txt  LICENSE  cmake-linux.sh
src/diskscan/: CMakeLists.txt  cli.hpp  filescan.hpp  main.cpp
